# mini-lambda

./: README.md  mini-lambda.cabal  stack.yaml
app/: Main.hs
src/: MiniLambda.hs
src/MiniLambda/: Definitions.hs  Parser.hs
src/MiniLambda/Parser/: Internal.hs
test/: Spec.hs
