name:                mini-lambda
version:             0.1.0.0
synopsis:            Small lambda interpreter
description:         Please see README.md
homepage:            http://github.com/phipsgabler/mini-lambda#readme
license:             OtherLicense
license-file:        UNLICENSE
author:              Philipp Gabler
maintainer:          phips.gabler@gmail.com
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MiniLambda
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable mini-lambda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mini-lambda
  default-language:    Haskell2010

test-suite mini-lambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mini-lambda
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/phipsgabler/mini-lambda
